--- a/index.html
+++ b/index.html
@@ -48,13 +48,39 @@ a:link,a:visited {
 <li><a href="/courses/MIS611D/chen_publications_2019.pdf" target="_blank">Journals, Conferences, and Funding Sources for MIS Researchers and Educators: A Resource Guide</a>, by Dr. Hsinchun Chen (Updated 2019)</li>
 <li><a href="/courses/MIS611D/2017_journal_citation_report.pdf" target="_blank">ISI Ranking of Top Computer Science and Information Systems Journals, from the ISI Web of Knowledge 2017 edition</a><a href="/courses/MIS510/chen-guide-mis-2003.pdf">, </a>updated in December 2018</li>
 <li><a href="/courses/resources/h-index_mis_jan2019.pdf" target="_blank">The H Index for MIS</a>, January 2019</li>
+
 <li><a href="/courses/MIS611D/chenr_rsearch_template-2019.ppt" target="_blank">Template for Producing IT Research and Publication</a>, by Dr. Hsinchun Chen</li>
 <ol><li><a href="/courses/resources/ieee_format_2014_04_msw_a4_format.doc" target="_blank">IEEE Template</a> - Word Document</li>
 <li>IEEE Paper Examples</li>
 <ol><li><a href="/courses/resources/vb_threats_2015.pdf" target="_blank">Exploring Threats and Vulnerabilities in Hacker Web: Forums, IRC and Carding Shops</a> - PDF (Benjamin et al., 2015)</li>
 <li><a href="/courses/resources/vb_language_2015.pdf" target="_blank">Developing Understanding of Hacker Language through the use of Lexical Semantics </a>- PDF (Benjamin and Chen, 2015)</li>
 <li><a href="/courses/resources/reza_2018_detecting_cyber_threats_in_non-english_dark_net.pdf" target="_blank">Detecting Cyber Threats in Non-English Dark Net Markets: A Cross-Lingual Transfer Learning Approach</a> - PDF (Ebrahimi et al., 2018)</li>
-</ol></ol><li><a href="/courses/MIS611D/hevner-2004-design_science_in_is_research.pdf" target="_blank">Design Science in Information Systems Research</a>, by Alan R. Hevner, Salvatore T. March, Jinsso Park, and Sudha Ram.  <em>MIS Quarterly</em>, Volume 28, Number 1, pp. 75-105, March 2004.</li>
+</ol></ol>
+
+<li>Sample Research by Applications</a>, by Dr. Hsinchun Chen</li>
+<ol><li>Cybersecurity and Security Analytics</li>
+
+<ol>
+<li><a href="/courses/MIS611D/criminal-network-analysis-xu-2005.pdf" target="_blank">Criminal Network Analysis and Visualization</a>, by Jennifer Xu and Hsinchun Chen , 2005</li>
+<li><a href="/courses/MIS510/ai_and_security_informatics.pdf" target="_blank">AI and Security Informatics</a>, by Hsinchun Chen, (September/October 2010)</li>
+<li><a href="/courses/resources/ahmed-cybergate-misq-2008.pdf" target="_blank">CyberGate: A Design Framework and System for Text Analysis of Computer-Mediated Communication</a>, by Abbasi and Chen, December 2008 (MISQ) - PDF</li>
+<li><a href="/courses/resources/ahmed-fakesite-misq-2010.pdf" target="_blank">Detecting Fake Websites: The Contribution of Statistical Learning Theory</a>, by Abbasi et al., September 2010 (MISQ) - PDF</li>
+<li><a href="/courses/resources/benjamin_et_al._2019_dice-e_-_a_framework_for_conducting_darknet_identification_collection_evaluation_with_ethics.pdf" target="_blank">DICE-E: A Framework for Conducting Darknet. Identification, Collection, Evaluation, with Ethics</a>, by Victor Benjamin, Joseph S. Valacich, and Hsinchun Chen, 2019 (MISQ) - PDF</li>
+</ol>
+
+<li>Smart Health</li>
+
+
+<li>Smart Business and Money</li>
+<li>Sports and Games Analytics</li>
+
+
+
+</ol>
+
+
+
+<li><a href="/courses/MIS611D/hevner-2004-design_science_in_is_research.pdf" target="_blank">Design Science in Information Systems Research</a>, by Alan R. Hevner, Salvatore T. March, Jinsso Park, and Sudha Ram.  <em>MIS Quarterly</em>, Volume 28, Number 1, pp. 75-105, March 2004.</li>
 <li><a href="/courses/MIS611D/gregor-2013-positioning-presenting-design-science-research.pdf" target="_blank">Positioning and Presenting Design Science Research for Maximum Impact</a>, by Shirley Gregor and Alan R. Hevner. <em>MIS Quarterly</em>, Volume 37, Number 2, pp. 337-355, June 2013.</li>
 <li><a href="/courses/resources/02-editors_comments_diversity_of_design_science_research.pdf" target="_blank" style="color: #0077b3;">Editor's Comments: Diversity of Design Science Research</a>, by Arun Rai, Andrew Burton-Jones, Hsinchun Chen, Alok Gupta, Alan R. Hevner, and Wolfgang Ketter. <em>MIS Quarterly</em>, Volume 41, Number 1, pp. iii-xviii, March 2017.</li>
 <li><a href="/courses/MIS611D/chen-bi-december-2012.pdf" target="_blank">MISQ BI Special Issue: Business Intelligence and Analytics: From Big Data to Big Impact</a>, by Hsinchun Chen et al. (2012).</li>
@@ -239,7 +265,7 @@ a:link,a:visited {
 </ol>
 <h3>TOPIC 5: Emerging Research in Data and Web Mining (for MIS 611D)</h3>
 <ol><li>COPLINK, Dark Web, and Hacker Web: A Research Path in Security Informatics, by Dr. Hsinchun Chen</li>
-<li><a href="/courses/MIS611D/criminal-network-analysis-xu-2005.pdf" target="_blank">Criminal Network Analysis and Visualization</a>, by Jennifer Xu and Hsinchun Chen</li>
+<li><a href="/courses/MIS611D/criminal-network-analysis-xu-2005.pdf" target="_blank">Criminal Network Analysis and Visualization</a>, by Jennifer Xu and Hsinchun Chen , 2005</li>
 <li><a href="/courses/MIS611D/topology-of-dark-networks-xu-2007.pdf" target="_blank">The Topology of Dark Networks</a>, by Jennifer Xu and Hsinchun Chen</li>
 <li><a href="/courses/resources/exploring_dark_networks_nas_october_2017_-_copy.pptx">Exploring Dark Networks: From the Surface Web to the Dark Web</a>, by Hsinchun Chen, October 2017</li>
 <li><a href="/courses/MIS510/misq_cybergate.ppt">CyberGate: A Design Framework and System for Text Analysis of CMC</a>, by Ahmed Abbasi and Hsinchun Chen</li>
