--- a/index.html
+++ b/index.html
@@ -58,22 +58,40 @@ a:link,a:visited {
 </ol></ol>
 
 <li>Sample Research by Applications</a>, by Dr. Hsinchun Chen</li>
-<ol><li>Cybersecurity and Security Analytics</li>
+<ol>
 
+<li>Cybersecurity and Security Analytics</li>
 <ol>
 <li><a href="/courses/MIS611D/criminal-network-analysis-xu-2005.pdf" target="_blank">Criminal Network Analysis and Visualization</a>, by Jennifer Xu and Hsinchun Chen , 2005</li>
 <li><a href="/courses/MIS510/ai_and_security_informatics.pdf" target="_blank">AI and Security Informatics</a>, by Hsinchun Chen, (September/October 2010)</li>
-<li><a href="/courses/resources/ahmed-cybergate-misq-2008.pdf" target="_blank">CyberGate: A Design Framework and System for Text Analysis of Computer-Mediated Communication</a>, by Abbasi and Chen, December 2008 (MISQ) - PDF</li>
-<li><a href="/courses/resources/ahmed-fakesite-misq-2010.pdf" target="_blank">Detecting Fake Websites: The Contribution of Statistical Learning Theory</a>, by Abbasi et al., September 2010 (MISQ) - PDF</li>
-<li><a href="/courses/resources/benjamin_et_al._2019_dice-e_-_a_framework_for_conducting_darknet_identification_collection_evaluation_with_ethics.pdf" target="_blank">DICE-E: A Framework for Conducting Darknet. Identification, Collection, Evaluation, with Ethics</a>, by Victor Benjamin, Joseph S. Valacich, and Hsinchun Chen, 2019 (MISQ) - PDF</li>
+<li><a href="/courses/resources/ahmed-cybergate-misq-2008.pdf" target="_blank">CyberGate: A Design Framework and System for Text Analysis of Computer-Mediated Communication</a>, by Abbasi and Chen, December 2008 (MISQ)</li>
+<li><a href="/courses/resources/ahmed-fakesite-misq-2010.pdf" target="_blank">Detecting Fake Websites: The Contribution of Statistical Learning Theory</a>, by Abbasi et al., September 2010 (MISQ)</li>
+<li><a href="/courses/resources/benjamin_et_al._2019_dice-e_-_a_framework_for_conducting_darknet_identification_collection_evaluation_with_ethics.pdf" target="_blank">DICE-E: A Framework for Conducting Darknet. Identification, Collection, Evaluation, with Ethics</a>, by Victor Benjamin, Joseph S. Valacich, and Hsinchun Chen, 2019 (MISQ)</li>
 </ol>
 
 <li>Smart Health</li>
-
+<ol>
+<li><a href="/courses/MIS510/smart_health_and_wellbeing.pdf" target="_blank">Smart Health and Wellbeing</a>, by Hsinchun Chen (September/October 2011)</li>
+<li><a href="/courses/MIS510/6c-globalsurveillance-2009.pdf" target="_blank">AI for Global Disease Surveillance</a>, by Hsinchun Chen and Daniel Zeng (November/December 2009)</li>
+<li><a href="/courses/MIS611D/ieee-is-lin-2014.pdf" target="_blank">Time-To-Event Predictive Modeling for Chronic Conditions Using Electronic Health Records</a>, by Yu-Kai Lin, Hsinchun Chen, Randall A. Brown, Shu-Hsing Li, and Hung-Jen Yang (2014)</li>
+<li><a href="/courses/resources/lin_et_al_bmtl_2017_misq.pdf" target="_blank">Healthcare Predictive Analytics for Risk Profiling in Chronic Care: A Bayesian Multitask Learning Approach</a>, by Yu-Kai Lin et al., 2017 (MISQ) - PDF</li>
+</ol>
 
 <li>Smart Business and Money</li>
-<li>Sports and Games Analytics</li>
+<ol>
+<li><a href="/courses/MIS510/6d-businessmarketing.pdf" target="_blank">Business and Market Intelligence 2.0</a>, by Hsinchun Chen (January/February 2010)</li>
+<li><a href="/courses/MIS510/smart_market_and_money.pdf" target="_blank">Smart Market and Money</a>, by Hsinchun Chen (November/December 2011)</li>
+<li><a href="/courses/MIS510/ai_and_opinion_mining.pdf" target="_blank">AI and Opinion Mining</a>, by Hsinchun Chen and David Zimbra (May/June 2010)</li>
+<li><a href="/courses/MIS510/Qing_Survey_2018.pdf" target="_blank">Web Media and Stock Markets : A Survey and Future Directions from a Big Data Perspective</a>, by Qing Li, Yan Chen, Jun Wang, Yuanzhu Chen, and Hsinchun Chen, 2018</li>
+<li><a href="/courses/MIS510/Qing TKDE_2020.pdf" target="_blank">A Multimodal Event-driven LSTM Model for Stock Prediction Using Online News</a>, by Qing Li, Jinghua Tan, Jun Wang, and Hsinchun Chen, 2020</li>
+</ol>
 
+
+
+<li>Sports and Games Analytics</li>
+<ol>
+
+</ol>
 
 
 </ol>
