--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@ a:link,a:visited {
 
 <li>Sports and Games Analytics</li>
 <ol>
-
+<li><a href="/courses/MIS510/expertprediction.pdf" target="_blank">Expert Prediction, Symbolic Learning, and Neural Networks-An Experiment on Greyhound Racing</a>, by Hsinchun Chen et al., IEEE Expert (December 1994)</li>
+<li><a href="/courses/MIS510/Chen_SportsDataMining_Book 2010.pdf" target="_blank">Sports Data Mining</a>, by Robert Schumaker, Osama Solieman, and Hsinchun Chen, 2010</li>
+<li><a href="/courses/MIS510/ai-virtual-worlds.pdf" target="_blank">AI, Virtual Worlds, and Massively Multiplayer Online Games</a>, by Hsinchun Chen and Yulei Zhang (January/February 2011)</li>
 </ol>
 
 
