--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/ai-virtual-worlds.pdf" target="_blank">AI, Virtual Worlds, and Massively Multiplayer Online Games</a>, by Hsinchun Chen and Yulei Zhang (January/February 2011)</li>
 </ol>
 
-
 </ol>
+
+<li><a href="/courses/MIS510/CRII_Entire_Proposal.pdf" target="_blank"> Sample NSF Proposal for Cybersecurity </a>, by Sagar Samtani and Hsinchun Chen, 2019</li>
 
 
 
