--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/smart_market_and_money.pdf" target="_blank">Smart Market and Money</a>, by Hsinchun Chen (November/December 2011)</li>
 <li><a href="/courses/MIS510/ai_and_opinion_mining.pdf" target="_blank">AI and Opinion Mining</a>, by Hsinchun Chen and David Zimbra (May/June 2010)</li>
 <li><a href="/courses/MIS510/Qing_Survey_2018.pdf" target="_blank">Web Media and Stock Markets : A Survey and Future Directions from a Big Data Perspective</a>, by Qing Li, Yan Chen, Jun Wang, Yuanzhu Chen, and Hsinchun Chen, 2018</li>
-<li><a href="/courses/MIS510/Qing TKDE_2020.pdf" target="_blank">A Multimodal Event-driven LSTM Model for Stock Prediction Using Online News</a>, by Qing Li, Jinghua Tan, Jun Wang, and Hsinchun Chen, 2020</li>
+<li><a href="/courses/MIS510/Qing_TKDE_2020.pdf" target="_blank">A Multimodal Event-driven LSTM Model for Stock Prediction Using Online News</a>, by Qing Li, Jinghua Tan, Jun Wang, and Hsinchun Chen, 2020</li>
 </ol>
 
 
