--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ a:link,a:visited {
 <li><a href="/courses/resources/big_data_technology_-_hadoop_mapreduce_and_spark_190131.pptx">Big Data Technology - Hadoop, MapReduce, and Spark</a> (Jonathan Jiang, with updates from Sagar Samtani and Shuo Yu, 2019)</li>
 <li><a href="/courses/resources/introduction_to_blockchain_and_a_demo_on_financial_trades-180723080737.pptx">Introduction to Blockchain and a Demo on Financial Trades</a> (Eric Tham, 2018)</li>
 
-<li>Python for Data Analytics</li>
-<ol><li><a href="/courses/resources/PythonReview_1.pptx">Python Review for Data Analytics</a>, by Mohammadreza Ebrahimi and Hsinchun Chen</li>
+<li>Python Overview for Data Analytics</li>
+<ol><li><a href="/courses/resources/PythonReview_1.pptx">Python for Data Analytics</a>, by Mohammadreza Ebrahimi and Hsinchun Chen</li>
 <ol><li><a href="/courses/resources/Guttag_2013.pdf">Introduction to Computation and Programming Using Python</a>, by John Guttag</li>
 </ol>
 
