--- a/index.html
+++ b/index.html
@@ -118,15 +118,17 @@ a:link,a:visited {
 
 <li>Python Overview for Data Analytics</li>
 <ol><li><a href="/courses/resources/PythonReview_1.pptx">Python for Data Analytics</a>, by Mohammadreza Ebrahimi and Hsinchun Chen</li>
-<ol><li><a href="/courses/resources/Guttag_2013.pdf">Introduction to Computation and Programming Using Python</a>, by John Guttag</li>
+<li><a href="/courses/resources/Guttag_2013.pdf">Introduction to Computation and Programming Using Python</a>, by John Guttag</li>
 </ol>
 
 <li><a href="/courses/resources/tableau_overview_and_example_ss_hz_updated.pptx">Tableau Overview and Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
-<ol><li><a href="/courses/resources/nfl_offensive_player_stats_1999-2013.xlsx">Sample NFL Dataset for Visualization</a></li>
+<ol>
+<li><a href="/courses/resources/nfl_offensive_player_stats_1999-2013.xlsx">Sample NFL Dataset for Visualization</a></li>
 </ol>
 
 <li><a href="/courses/resources/weka_overview_slides_190117.pptx">WEKA Overview</a> (Sagar Samtani, Weifeng Li, and Hsinchun Chen, with updates from Shuo Yu, 2019)</li>
-<ol><li><a href="/courses/resources/iris-train.arff">iris-trai</a>n, <a href="/courses/resources/iris-test.arff">iris-test</a>, <a href="/courses/resources/houses-train.arff">houses-train</a>, <a href="/courses/resources/houses-test.arff">houses-test</a></li>
+<ol>
+<li><a href="/courses/resources/iris-train.arff">iris-trai</a>n, <a href="/courses/resources/iris-test.arff">iris-test</a>, <a href="/courses/resources/houses-train.arff">houses-train</a>, <a href="/courses/resources/houses-test.arff">houses-test</a></li>
 </ol>
 
 </ol>
