--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ a:link,a:visited {
 <li><a href="/courses/MIS611D/design-science-hchen.pdf" target="_blank">Design Science, Grand Challenges, and Societal Impacts</a>, by Hsinchun Chen<a href="http://dl.acm.org/citation.cfm?id=1929917" target="_blank">.</a> <em>Transactions on Management Information Systems</em>, Volume 2, Issue 1, pp. 1:1 - 1:10. [<a href="/courses/resources/chen-editorial-design-science.pdf" target="_blank">PDF copy here</a>]</li>
 <li><a href="/courses/MIS611D/chen_publications_2019.pdf" target="_blank">Journals, Conferences, and Funding Sources for MIS Researchers and Educators: A Resource Guide</a>, by Dr. Hsinchun Chen (Updated 2019)</li>
 <li><a href="/courses/MIS611D/2017_journal_citation_report.pdf" target="_blank">ISI Ranking of Top Computer Science and Information Systems Journals, from the ISI Web of Knowledge 2017 edition</a><a href="/courses/MIS510/chen-guide-mis-2003.pdf">, </a>updated in December 2018</li>
-<li><a href="/courses/resources/h-index_mis_jan2019.pdf" target="_blank">The H Index for MIS</a>, January 2019</li>
+<li><a href="/courses/h_index" target="_blank">The H-Index for MIS</a>, January 2019</li>
+<li><a href="/courses/resources/h-index_mis_jan2019.pdf" target="_blank">The H-Index for CS</a>, January 2020</li>
 
 <li><a href="/courses/MIS611D/chenr_rsearch_template-2019.ppt" target="_blank">Template for Producing IT Research and Publication</a>, by Dr. Hsinchun Chen</li>
 <ol><li><a href="/courses/resources/ieee_format_2014_04_msw_a4_format.doc" target="_blank">IEEE Template</a> - Word Document</li>
