--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ a:link,a:visited {
 <li><a href="/courses/MIS611D/chenr_rsearch_template-2019.ppt" target="_blank">Template for Producing IT Research and Publication</a>, by Dr. Hsinchun Chen</li>
 <ol><li><a href="/courses/resources/ieee_format_2014_04_msw_a4_format.doc" target="_blank">IEEE Template</a> - Word Document</li>
 <li>IEEE Paper Examples</li>
-<ol><li><a href="/courses/resources/vb_threats_2015.pdf" target="_blank">Exploring Threats and Vulnerabilities in Hacker Web: Forums, IRC and Carding Shops</a> - PDF (Benjamin et al., 2015)</li>
-<li><a href="/courses/resources/vb_language_2015.pdf" target="_blank">Developing Understanding of Hacker Language through the use of Lexical Semantics </a>- PDF (Benjamin and Chen, 2015)</li>
-<li><a href="/courses/resources/reza_2018_detecting_cyber_threats_in_non-english_dark_net.pdf" target="_blank">Detecting Cyber Threats in Non-English Dark Net Markets: A Cross-Lingual Transfer Learning Approach</a> - PDF (Ebrahimi et al., 2018)</li>
+<ol><li><a href="/courses/resources/vb_threats_2015.pdf" target="_blank">Exploring Threats and Vulnerabilities in Hacker Web: Forums, IRC and Carding Shops</a>, by Benjamin et al., 2015, IEEE ISI</li>
+<li><a href="/courses/resources/vb_language_2015.pdf" target="_blank">Developing Understanding of Hacker Language through the use of Lexical Semantics </a>, by Benjamin and Chen, 2015, IEEE ISI</li>
+<li><a href="/courses/resources/reza_2018_detecting_cyber_threats_in_non-english_dark_net.pdf" target="_blank">Detecting Cyber Threats in Non-English Dark Net Markets: A Cross-Lingual Transfer Learning Approach</a>, by Ebrahimi et al., 2018, IEEE ISI</li>
 </ol></ol>
 
 <li>Sample Research by Applications</a>, by Dr. Hsinchun Chen</li>
@@ -63,40 +63,40 @@ a:link,a:visited {
 
 <li>Cybersecurity and Security Analytics</li>
 <ol>
-<li><a href="/courses/MIS611D/criminal-network-analysis-xu-2005.pdf" target="_blank">Criminal Network Analysis and Visualization</a>, by Jennifer Xu and Hsinchun Chen , 2005</li>
-<li><a href="/courses/MIS510/ai_and_security_informatics.pdf" target="_blank">AI and Security Informatics</a>, by Hsinchun Chen, (September/October 2010)</li>
-<li><a href="/courses/resources/ahmed-cybergate-misq-2008.pdf" target="_blank">CyberGate: A Design Framework and System for Text Analysis of Computer-Mediated Communication</a>, by Abbasi and Chen, December 2008 (MISQ)</li>
-<li><a href="/courses/resources/ahmed-fakesite-misq-2010.pdf" target="_blank">Detecting Fake Websites: The Contribution of Statistical Learning Theory</a>, by Abbasi et al., September 2010 (MISQ)</li>
-<li><a href="/courses/resources/benjamin_et_al._2019_dice-e_-_a_framework_for_conducting_darknet_identification_collection_evaluation_with_ethics.pdf" target="_blank">DICE-E: A Framework for Conducting Darknet. Identification, Collection, Evaluation, with Ethics</a>, by Victor Benjamin, Joseph S. Valacich, and Hsinchun Chen, 2019 (MISQ)</li>
+<li><a href="/courses/MIS611D/criminal-network-analysis-xu-2005.pdf" target="_blank">Criminal Network Analysis and Visualization</a>, by Jennifer Xu and Hsinchun Chen , 2005, CACM</li>
+<li><a href="/courses/MIS510/ai_and_security_informatics.pdf" target="_blank">AI and Security Informatics</a>, by Hsinchun Chen, (September/October 2010), IEEE IS</li>
+<li><a href="/courses/resources/ahmed-cybergate-misq-2008.pdf" target="_blank">CyberGate: A Design Framework and System for Text Analysis of Computer-Mediated Communication</a>, by Abbasi and Chen, December 2008, MISQ</li>
+<li><a href="/courses/resources/ahmed-fakesite-misq-2010.pdf" target="_blank">Detecting Fake Websites: The Contribution of Statistical Learning Theory</a>, by Abbasi et al., September 2010, MISQ</li>
+<li><a href="/courses/resources/benjamin_et_al._2019_dice-e_-_a_framework_for_conducting_darknet_identification_collection_evaluation_with_ethics.pdf" target="_blank">DICE-E: A Framework for Conducting Darknet. Identification, Collection, Evaluation, with Ethics</a>, by Victor Benjamin, Joseph S. Valacich, and Hsinchun Chen, 2019, MISQ</li>
 </ol>
 
 <li>Smart Health</li>
 <ol>
-<li><a href="/courses/MIS510/smart_health_and_wellbeing.pdf" target="_blank">Smart Health and Wellbeing</a>, by Hsinchun Chen (September/October 2011)</li>
-<li><a href="/courses/MIS510/6c-globalsurveillance-2009.pdf" target="_blank">AI for Global Disease Surveillance</a>, by Hsinchun Chen and Daniel Zeng (November/December 2009)</li>
-<li><a href="/courses/MIS611D/ieee-is-lin-2014.pdf" target="_blank">Time-To-Event Predictive Modeling for Chronic Conditions Using Electronic Health Records</a>, by Yu-Kai Lin, Hsinchun Chen, Randall A. Brown, Shu-Hsing Li, and Hung-Jen Yang (2014)</li>
-<li><a href="/courses/resources/lin_et_al_bmtl_2017_misq.pdf" target="_blank">Healthcare Predictive Analytics for Risk Profiling in Chronic Care: A Bayesian Multitask Learning Approach</a>, by Yu-Kai Lin et al., 2017 (MISQ) - PDF</li>
+<li><a href="/courses/MIS510/smart_health_and_wellbeing.pdf" target="_blank">Smart Health and Wellbeing</a>, by Hsinchun Chen (September/October 2011), IEEE IS</li>
+<li><a href="/courses/MIS510/6c-globalsurveillance-2009.pdf" target="_blank">AI for Global Disease Surveillance</a>, by Hsinchun Chen and Daniel Zeng (November/December 2009), IEEE IS</li>
+<li><a href="/courses/MIS611D/ieee-is-lin-2014.pdf" target="_blank">Time-To-Event Predictive Modeling for Chronic Conditions Using Electronic Health Records</a>, by Yu-Kai Lin, Hsinchun Chen, Randall A. Brown, Shu-Hsing Li, and Hung-Jen Yang (2014), JBI</li>
+<li><a href="/courses/resources/lin_et_al_bmtl_2017_misq.pdf" target="_blank">Healthcare Predictive Analytics for Risk Profiling in Chronic Care: A Bayesian Multitask Learning Approach</a>, by Yu-Kai Lin et al., 2017, MISQ</li>
 </ol>
 
 <li>Smart Business and Money</li>
 <ol>
-<li><a href="/courses/MIS510/6d-businessmarketing.pdf" target="_blank">Business and Market Intelligence 2.0</a>, by Hsinchun Chen (January/February 2010)</li>
-<li><a href="/courses/MIS510/smart_market_and_money.pdf" target="_blank">Smart Market and Money</a>, by Hsinchun Chen (November/December 2011)</li>
-<li><a href="/courses/MIS510/ai_and_opinion_mining.pdf" target="_blank">AI and Opinion Mining</a>, by Hsinchun Chen and David Zimbra (May/June 2010)</li>
-<li><a href="/courses/resources/Qing_Survey_2018.pdf" target="_blank">Web Media and Stock Markets : A Survey and Future Directions from a Big Data Perspective</a>, by Qing Li, Yan Chen, Jun Wang, Yuanzhu Chen, and Hsinchun Chen, 2018</li>
-<li><a href="/courses/resources/Qing_TKDE_2020.pdf" target="_blank">A Multimodal Event-driven LSTM Model for Stock Prediction Using Online News</a>, by Qing Li, Jinghua Tan, Jun Wang, and Hsinchun Chen, 2020</li>
+<li><a href="/courses/MIS510/6d-businessmarketing.pdf" target="_blank">Business and Market Intelligence 2.0</a>, by Hsinchun Chen (January/February 2010), IEEE IS</li>
+<li><a href="/courses/MIS510/smart_market_and_money.pdf" target="_blank">Smart Market and Money</a>, by Hsinchun Chen (November/December 2011), IEEE IS</li>
+<li><a href="/courses/MIS510/ai_and_opinion_mining.pdf" target="_blank">AI and Opinion Mining</a>, by Hsinchun Chen and David Zimbra (May/June 2010), IEEE IS</li>
+<li><a href="/courses/resources/Qing_Survey_2018.pdf" target="_blank">Web Media and Stock Markets : A Survey and Future Directions from a Big Data Perspective</a>, by Qing Li, Yan Chen, Jun Wang, Yuanzhu Chen, and Hsinchun Chen, 2018, IEEE TKDE</li>
+<li><a href="/courses/resources/Qing_TKDE_2020.pdf" target="_blank">A Multimodal Event-driven LSTM Model for Stock Prediction Using Online News</a>, by Qing Li, Jinghua Tan, Jun Wang, and Hsinchun Chen, 2020, IEEE TKDE</li>
 </ol>
 
 <li>Sports and Games Analytics</li>
 <ol>
-<li><a href="/courses/MIS510/expertprediction.pdf" target="_blank">Expert Prediction, Symbolic Learning, and Neural Networks-An Experiment on Greyhound Racing</a>, by Hsinchun Chen et al., IEEE Expert (December 1994)</li>
-<li><a href="/courses/resources/Chen_SportsDataMining_Book 2010.pdf" target="_blank">Sports Data Mining</a>, by Robert Schumaker, Osama Solieman, and Hsinchun Chen, 2010</li>
-<li><a href="/courses/MIS510/ai-virtual-worlds.pdf" target="_blank">AI, Virtual Worlds, and Massively Multiplayer Online Games</a>, by Hsinchun Chen and Yulei Zhang (January/February 2011)</li>
+<li><a href="/courses/MIS510/expertprediction.pdf" target="_blank">Expert Prediction, Symbolic Learning, and Neural Networks-An Experiment on Greyhound Racing</a>, by Hsinchun Chen et al., IEEE Expert (December 1994), IEEE Expert</li>
+<li><a href="/courses/resources/Chen_SportsDataMining_Book 2010.pdf" target="_blank">Sports Data Mining</a>, by Robert Schumaker, Osama Solieman, and Hsinchun Chen, 2010, Springer</li>
+<li><a href="/courses/MIS510/ai-virtual-worlds.pdf" target="_blank">AI, Virtual Worlds, and Massively Multiplayer Online Games</a>, by Hsinchun Chen and Yulei Zhang (January/February 2011), IEEE IS</li>
 </ol>
 
 </ol>
 
-<li><a href="/courses/resources/CRII_Entire_Proposal.pdf" target="_blank"> Sample NSF Proposal for Cybersecurity </a>, by Sagar Samtani and Hsinchun Chen, 2019</li>
+<li><a href="/courses/resources/CRII_Entire_Proposal.pdf" target="_blank"> Sample NSF Proposal for Cybersecurity </a>, by Sagar Samtani, 2019</li>
 
 <li><a href="/courses/MIS611D/hevner-2004-design_science_in_is_research.pdf" target="_blank">Design Science in Information Systems Research</a>, by Alan R. Hevner, Salvatore T. March, Jinsso Park, and Sudha Ram.  <em>MIS Quarterly</em>, Volume 28, Number 1, pp. 75-105, March 2004.</li>
 <li><a href="/courses/MIS611D/gregor-2013-positioning-presenting-design-science-research.pdf" target="_blank">Positioning and Presenting Design Science Research for Maximum Impact</a>, by Shirley Gregor and Alan R. Hevner. <em>MIS Quarterly</em>, Volume 37, Number 2, pp. 337-355, June 2013.</li>
@@ -118,8 +118,8 @@ a:link,a:visited {
 <li><a href="/courses/resources/introduction_to_blockchain_and_a_demo_on_financial_trades-180723080737.pptx">Introduction to Blockchain and a Demo on Financial Trades</a> (Eric Tham, 2018)</li>
 
 <li>Python Overview for Data Analytics</li>
-<ol><li><a href="/courses/resources/PythonReview_1.pptx">Python for Data Analytics</a>, by Mohammadreza Ebrahimi and Hsinchun Chen</li>
-<li><a href="/courses/resources/Guttag_2013.pdf">Introduction to Computation and Programming Using Python</a>, by John Guttag</li>
+<ol><li><a href="/courses/resources/PythonReview_1.pptx">Python for Data Analytics</a>, by Mohammadreza Ebrahimi and Hsinchun Chen, 2020</li>
+<li><a href="/courses/resources/Guttag_2013.pdf">Introduction to Computation and Programming Using Python</a>, by John Guttag, 2013</li>
 </ol>
 
 <li><a href="/courses/resources/tableau_overview_and_example_ss_hz_updated.pptx">Tableau Overview and Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
