--- a/h_index/index.html
+++ b/h_index/index.html
@@ -23,10 +23,77 @@ a:link,a:visited {
 <body style="margin:20px; padding:0">
         <div id="content" class="column" role="main">
         <a id="main-content"></a>   	
-                          <h2 class="title" id="page-title"><font face="MiloWeb">MIS 464, Data Analytics</font></h2>                                                       
+                          <h2 class="title" id="page-title"><font face="MiloWeb">The H-Index for Management Information Systems (Updated January 2019)</font></h2>                                                       
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
-  <div class="field field-name-field-image field-type-image field-label-hidden">
-    <img typeof="foaf:Image" src="/courses/MIS464/wordle496a.png" width="1058" height="386" alt="" />  </div>
+  <p>
+  <style><!-- br {
+mso-data-placement:same-cell; }
+table {
+mso-displayed-decimal-separator:"\."; mso-displayed-thousand-separator:"\, "; }
+tr {
+mso-height-source:auto; mso-ruby-visibility:none; }
+td {
+border:.5pt solid windowtext; }
+.NormalTable{cellspacing:0;cellpadding:10;border-collapse:collapse;mso-table-layout-alt:fixed;border:none; mso-border-alt:solid windowtext .75pt;mso-padding-alt:0cm 5.4pt 0cm 5.4pt; mso-border-insideh:.75pt solid windowtext;mso-border-insidev:.75pt solid windowtext} .fontstyle0 {
+&nbsp;&nbsp;&nbsp;&nbsp;font-family:TimesNewRomanPS-BoldMT; &nbsp;&nbsp;&nbsp;&nbsp;font-size:12pt; &nbsp;&nbsp;&nbsp;&nbsp;font-style:normal; &nbsp;&nbsp;&nbsp;&nbsp;font-weight:bold; &nbsp;&nbsp;&nbsp;&nbsp;color:rgb(0,0,0); }
+.fontstyle1 {
+&nbsp;&nbsp;&nbsp;&nbsp;font-size:12pt; &nbsp;&nbsp;&nbsp;&nbsp;font-style:normal; &nbsp;&nbsp;&nbsp;&nbsp;font-weight:normal; &nbsp;&nbsp;&nbsp;&nbsp;color:rgb(0,0,0); }
+.fontstyle2 {
+&nbsp;&nbsp;&nbsp;&nbsp;font-family:TimesNewRomanPSMT; &nbsp;&nbsp;&nbsp;&nbsp;font-size:10pt; &nbsp;&nbsp;&nbsp;&nbsp;font-style:normal; &nbsp;&nbsp;&nbsp;&nbsp;font-weight:normal; &nbsp;&nbsp;&nbsp;&nbsp;color:rgb(0,0,0); }
+.fontstyle3 {
+&nbsp;&nbsp;&nbsp;&nbsp;font-family:TimesNewRomanPS-ItalicMT; &nbsp;&nbsp;&nbsp;&nbsp;font-size:10pt; &nbsp;&nbsp;&nbsp;&nbsp;font-style:italic; &nbsp;&nbsp;&nbsp;&nbsp;font-weight:normal; &nbsp;&nbsp;&nbsp;&nbsp;color:rgb(0,0,0); }
+--></style> <span class="fontstyle0">The H-Index for Management Information Systems
+    <br>
+  </span><span class="fontstyle2">The&nbsp;</span><span class="fontstyle0" style="font-size:10pt;">h-index&nbsp;</span><span class="fontstyle2">is a citation index that attempts to measure both the productivity and impact of the published work of a scientist or
+    <br>scholar (http://en.wikipedia.org/wiki/H-index). The index was suggested by Jorge E. Hirsch, a physicist at UCSD, as a tool for
+    <br>determining theoretical physicists' relative quality (Hirsch, 2005). 
+  </span><span class="fontstyle0" style="font-size:10pt;">A scholar with an index of h has published h papers each of
+    <br>which has been cited by others at least h times
+  </span><span class="fontstyle2">. The h-index is intended to measure simultaneously the quality and sustainability of
+    <br>scientific output, as well as, to some extent, the diversity of scientific research. Since 2005, the h-index has been discussed and
+    <br>analyzed in major publications such as 
+  </span><span class="fontstyle3">PNAS&nbsp;</span><span class="fontstyle2">and&nbsp;</span><span class="fontstyle3">Nature&nbsp;</span><span class="fontstyle2">(Hirsch, 2005, 2007; Lehmann et al., 2006; Wendl, 2007) and adopted in
+    <br>many disciplines (e.g., physics, biology, computer science, information science, social sciences, economics, etc.).
+    <br>The h-index can be manually determined using citation databases or using automatic web tools. Subscription-based databases such as Scopus
+    <br>and the Web of Science provide automated calculators. Each database or tool is likely to produce a different h for the same scholar because
+    <br>of different coverage. Google Scholar is widely used due to its availability and easy access. Google Scholar tends to have more citations
+    <br>(especially from conference publications) than Scopus and Web of Science, which cover mostly journal publications
+    <br>(
+  </span><span class="fontstyle2" style="color:rgb(5,99,193);">http://en.wikipedia.org/wiki/H-index</span><span class="fontstyle2">).
+    <br>We provide here a partial list of Management Information System professors and researchers who each has an h-index of 25 or higher
+    <br>according to Google Scholar. The original list of scholars that we considered includes AIS LEO recipients, AIS Fellows, past ICIS
+    <br>conference and program chairs, recent ICIS track chairs, AEs of selected major MIS journals (MISQ, ISR, JMIS, MS, DSS, JAIS,
+    <br>TMIS), and highly ranked scholars from several recent MIS research productivity studies (e.g., CAIS 2007; EJIS 2007). Based on an
+    <br>initial list of about 400 senior scholars, a Python program was developed to automatically query Google Scholar and obtain the hindex for each scholar via a combination of predefined rules. If a given scholar does not have a Google Scholar profile, we used the
+    <br>popular and freely available Harzing’s “Publish or Perish” application (
+  </span><span class="fontstyle2" style="color:rgb(5,99,193);">http://www.harzing.com/pop.htm</span><span class="fontstyle2">), which also accesses Google
+    <br>Scholar for its h-index calculation. Selected results were manually checked to verify correctness. Our effort yielded 174 scholars with
+    <br>h-index of at least 25. Given the latest official number of AIS members in 2017 (i.e., 4,329), this number accounts for almost 4% of
+    <br>the AIS members.
+    <br>Although there are many different yardsticks for measuring research productivity in MIS, we believe the h-index is a metric that
+    <br>deserves attention due to its academic basis, simplicity, and wide acceptance in other major scientific disciplines. Several fields have
+    <br>included the h-index of productive scholars in their disciplines at selected web sites, such as “The h index for Computer Science” at
+    <br>
+  </span><span class="fontstyle2" style="color:rgb(5,99,193);">http://www.cs.ucla.edu/~palsberg/h-number.html</span><span class="fontstyle2">, and, for economists, the h-index provided on the IDEAS website and database at
+    <br>
+  </span><span class="fontstyle2" style="color:rgb(5,99,193);">http://ideas.repec.org/top/top.person.hindex.html</span><span class="fontstyle2">. This h-index for Management Information Systems is a similar effort.
+    <br>Any automated tool may invariably introduce errors, inconsistencies, or omissions. Please send comments, corrections, and new
+    <br>entries to Riley McIsaac at the University of Arizona, 
+  </span><span class="fontstyle3" style="color:rgb(5,99,193);">ailab@eller.arizona.edu</span><span class="fontstyle2">. We would like to thank the community members for
+    <br>their valuable feedback and inputs. We will continue to provide an annual update based on our existing program and Google
+    <br>Scholar.
+    <br>References:
+    <br>Jorge E. Hirsch (2005). "An index to quantify an individual's scientific research output." PNAS 102 (46): 16569–16572. Jorge E.
+    <br>Hirsch (2007). "Does the h-index have predictive power?" PNAS 104 (49): 19193–19198.
+    <br>Michael Wendl (2007). "H-index: however ranked, citations need context." Nature 449 (7161): 403.
+    <br>Sune Lehmann, Andrew D. Jackson, and Benny E. Lautrup (2006). "Measures for measures." Nature 444 (7122): 1003–4.
+    <br>
+  </span><span class="fontstyle3">Please send comments, corrections, and new entries to Riley McIsaac at the University of Arizona,
+    <br>
+  </span><span class="fontstyle3" style="color:rgb(5,99,193);">ailab@eller.arizona.edu</span><span class="fontstyle3">.</span>
+  <br style=" font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: -webkit-auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px;">
+  <br>
+</p>
 </div>
 
 
