--- a/h_index/index.html
+++ b/h_index/index.html
@@ -41,18 +41,14 @@ a:link,a:visited {
   <a href="mailto:ailab@eller.arizona.edu" target="_blank"><em>ailab@eller.arizona.edu</em></a>. We would like to thank the community members for their valuable feedback and inputs. We will continue to provide an annual update based on our existing program and Google Scholar.
 </p>
 <p>References:</p>
-<p>&nbsp;</p>
 <p>Jorge E. Hirsch (2005). "An index to quantify an individual's scientific research output." PNAS 102 (46): 16569–16572. Jorge E. Hirsch (2007). "Does the h-index have predictive power?" PNAS 104 (49): 19193–19198.</p>
-<p>&nbsp;</p>
 <p>Michael Wendl (2007). "H-index: however ranked, citations need context." Nature 449 (7161): 403.</p>
-<p>&nbsp;</p>
 <p>Sune Lehmann, Andrew D. Jackson, and Benny E. Lautrup (2006). "Measures for measures." Nature 444 (7122): 1003–4.</p>
-<p>&nbsp;</p>
 <p><em>Please note that the compilation of this list is ongoing until end of February 2019 and then it will freeze until the next major update. – If you are aware of discrepancies in the list, please contact&nbsp;</em>
   <a href="mailto:ailab@eller.arizona.edu" target="_blank"><em>ailab@eller.arizona.edu</em></a> <em>so that we can address your concerns. We plan to update this list every two years.</em></p>
 
 
-<p>H-Index for Management Information Systems (January 2019)</p>
+<p><font face="MiloWeb">H-Index for Management Information Systems (January 2019</font></p>
 <table width="100%" cellspacing="0" cellpadding="0" border="1">
   <tbody>
     <tr>
