--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:link,a:visited {
 
 <ol>
 <li><a href="/courses/MIS611D/chen_mis_review_2019.ppt" target="_blank">University of Arizona MIS Program: Overview</a>, by Dr. Hsinchun Chen</li>
-<li>, by Dr. Hsinchun Chen, 2020, <a href="/courses/resources/Analytics_Intellectual_Landscape_January_2020.pdf" target="_blank"> pdf version </a> </li>
+<li><a href="/courses/Advice" target="_blank"> Academic/Intellectual Advice </a>, by Dr. Hsinchun Chen, 2020, <a href="/courses/resources/Analytics_Intellectual_Landscape_January_2020.pdf" target="_blank"> pdf version </a> </li>
 <li><a href="/courses/resources/MIS_Analytics_Curriculum_January_2020.pdf" target="_blank">MIS Analytics Curriculum</a>, by Dr. Hsinchun Chen, 2020</li>
 <li><a href="/courses/resources/01-acm_student_mebership_form.pdf" target="_blank" style="color: #0077b3;">ACM Student Membership Application and Order Form [PDF]</a>, [<a href="https://services.acm.org/public/qj/quickjoin/qj_control.cfm?promo=PWEBTOP&amp;form_type=Student" target="_blank">Online Link</a>]</li>
 <li><a href="https://www.ieee.org/membership/join/index.html" target="_blank">IEEE Student Membership Application</a></li>
