--- a/Advice/index.html
+++ b/Advice/index.html
@@ -43,7 +43,7 @@ a:link,a:visited {
 </ul>
 <p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.75in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
 <ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>Major Industry Players/Labs (a global emerging IT landscape)</strong></li>
+  <li><strong>II. Major Industry Players/Labs (a global emerging IT landscape)</strong></li>
 </ol>
 <ul style="list-style-type: disc;margin-left:undefined;">
   <li>FAANG: Facebook (social, facial recognition, AI), Amazon (e-commerce, recommender systems, logistics, cloud computing), Apple (mobile), Netflix (e-commerce, recommender systems), Google (SE, social, cloud computing, Brain, DeepMind)</li>
@@ -52,7 +52,7 @@ a:link,a:visited {
 </ul>
 <p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
 <ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>Major Universities/Labs (check Google Scholar, DBLP, H-index)</strong></li>
+  <li><strong>III. Major Universities/Labs (check Google Scholar, DBLP, H-index)</strong></li>
 </ol>
 <ul style="list-style-type: disc;margin-left:undefined;">
   <li>MIS: Arizona (H. Chen, Nunamaker), NYU (Tuzhilin), CMU</li>
@@ -60,7 +60,7 @@ a:link,a:visited {
 </ul>
 <p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
 <ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>Major Federal Funding Agencies (UA/MIS funding $200M)</strong></li>
+  <li><strong>IV. Major Federal Funding Agencies (UA/MIS funding $200M)</strong></li>
 </ol>
 <ul style="list-style-type: disc;margin-left:undefined;">
   <li>Research: NSF (STEM, $6B), NIH (health, $20B), DARPA (defense), IARPA (intelligence); UA/Eller/MIS Nunamker, H. Chen ($150M); NSF CyberCorps SFS Program (UA/AZSecure, $10M)</li>
@@ -68,7 +68,7 @@ a:link,a:visited {
 </ul>
 <p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
 <ol style="list-style-type: upper-alpha;margin-left:0.25in;" start="22">
-  <li><strong>Major Professional Societies, Conferences &amp; Journals (joint ASAP)</strong></li>
+  <li><strong>V. Major Professional Societies, Conferences &amp; Journals (joint ASAP)</strong></li>
 </ol>
 <ul style="list-style-type: disc;margin-left:undefined;">
   <li>MIS: ICIS, AMCIS; MISQ, ISR, JMIS (top-3)</li>
@@ -80,7 +80,7 @@ a:link,a:visited {
 </ul>
 <p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
 <ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>Major Analytics Applications &amp; Technologies (try ASAP)</strong></li>
+  <li><strong>VI. Major Analytics Applications &amp; Technologies (try ASAP)</strong></li>
 </ol>
 <ul style="list-style-type: disc;margin-left:undefined;">
   <li>Applications: cybersecurity, health, e-commerce, social media, sports; drones, AV, VR, e-sports, facial recognition, smart city, 5G</li>
