--- a/Curriculum/index.html
+++ b/Curriculum/index.html
@@ -25,67 +25,47 @@ a:link,a:visited {
         <a id="main-content"></a>   	
                           <h2 class="title" id="page-title"><font face="MiloWeb">The H-Index for Management Information Systems (Updated January 2019)</font></h2>                                                       
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
-  <p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><strong>Academic/Intellectual Advice:</strong></p>
-<ul style="list-style-type: disc;margin-left:undefined;">
-  <li>Societal Impacts (e.g., health, cybersecurity, green IT, privacy) &gt; &nbsp;Academic Impacts (papers)</li>
-  <li>IT (including CS, EE, MIS; information centric) &gt; MIS</li>
-  <li>CISE (computing, analytics; prescriptive) &gt; SBE (social, behavioral, economics; descriptive)</li>
-  <li>New (new applications, new technologies) &gt; Old (existing, well-known)</li>
-  <li>EQ (effort, attitude, time management, motivation, aspiration, discipline) &gt; IQ (raw talents)</li>
-</ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><strong>The Business Analytics Intellectual Landscape:</strong></p>
-<ol style="list-style-type: upper-roman;margin-left:0.25in;">
-  <li><strong>Major News Media and Scientific Publications (understanding the societal needs)</strong></li>
+<p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><strong><u><span style="font-size:13px;line-height:107%;">UA/Eller MIS Analytics Curriculum (Recommendations highlighted in boldface)</span></u></strong></p>
+<p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><strong><span style="font-size:13px;line-height:107%;">Analytics Working Group members: H. Chen, G. Leroy, B. Zhang, Y. Ge, S. Youn. Date: January 23, 2020</span></strong></p>
+<ol style="list-style-type: upper-roman;margin-left:undefined;">
+  <li><span style="line-height:107%;font-size:13px;">BS</span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 301 Data Structures (Junming); <strong>need to focus on Python, ADT, searching/sorting, library</strong></span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 331 DBMS (Bin); relations, SQL</span></li>
+  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;(arrow indicates prerequisite) MIS 464 Data Analytics (H Chen, Yong); web/data/text mining, DM algorithms, deep learning (CNN, RNN); <strong>possible for two semesters MIS 464A &amp; MIS 464B (Fall, Spring)</strong></span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 373 Operations Management</span></li>
+  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 4XX/5XX, <strong>Optimization/Dynamic Programming (Youn);</strong> <strong>possible new class by Youn for OM and MIS BS and MS students</strong></span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 461/561, <strong>Data Visualization (Lusi)</strong>; Tableau, Python/R viz, Tufte viz; <strong>need to go beyond Tableau, possible for BS and MS students (with less technical background)</strong></span></li>
 </ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
-  <li>The Economists (global, geopolitics), NYT (US), WSJ (global, business)</li>
-  <li>Nature, Science (some in IT, e.g., deep learning, AI; network science)</li>
-</ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.75in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>Major Industry Players/Labs (a global emerging IT landscape)</strong></li>
+<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><span style="font-size:13px;line-height:107%;">&nbsp;</span></p>
+<ol style="list-style-type: undefined;margin-left:undefined;">
+  <li><span style="line-height:107%;font-size:13px;">MS</span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 507 Intro to Web Computing (Daniel gone); Python, ADT, library, data analytics interface; <strong>possible to turn Daniel’s Perl class to Python for all MS &amp; Ph.D. students</strong></span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 531 DBMS (Faiz); relations, SQL</span></li>
+  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 587 Business Intelligence (Yong); data warehouse, KPI, Web analytics; <strong>possible co-listed as MIS 487 elective</strong></span></li>
+  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 510 <strong>Data &amp; Web Mining (Gondy)</strong>; intro to web, web APIs, DM and text mining; <strong>possible for Fall as Introduction required course</strong></span></li>
+  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 545 Data Mining for Business (Bin); classification, clustering; <strong>possible to cover deep learning (CNN/RNN) for MS and Ph.D. students; possible co-listed as MIS 445 elective; possible for Spring after MIS 510 as elective</strong></span></li>
+  <li><span style="line-height:107%;font-family:Wingdings;font-size:10.0pt;"><span style="font-family:Wingdings;">è</span></span><span style="line-height:107%;font-size:13px;">&nbsp;MIS 584 Big Data Technologies (Yong); Hadoop, Spark; MLlib; <strong>possible use of AWS for free; need to combine with MIS 586 Big Data Analytics (Youn; currently wrong SNA content); possible co-listed as MIS 484 elective</strong></span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 5XX, <strong>Optimization (Youn);</strong> <strong>possible new course, see above</strong></span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 6XX <strong>Social Network Analysis (Sudha); possible for both Ph.D. and selected MS students</strong></span></li>
 </ol>
+<p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><span style="font-size:13px;line-height:107%;">Possible Electives in Other Departments on Campus:</span></p>
 <ul style="list-style-type: disc;margin-left:undefined;">
-  <li>FAANG: Facebook (social, facial recognition, AI), Amazon (e-commerce, recommender systems, logistics, cloud computing), Apple (mobile), Netflix (e-commerce, recommender systems), Google (SE, social, cloud computing, Brain, DeepMind)</li>
-  <li>MI: Microsoft (AI, cloud computing), IBM (business analytics, cloud computing, AI/Waston)</li>
-  <li>BATH: Baidu (SE, AI), Alibaba (e-commerce, m-commerce, AI), Tencent (social, m-commerce), Huawei (mobile, 5G, AI)</li>
+  <li><span style="line-height:107%;font-size:13px;">INFO 457/557, <strong>Deep Learning/NN</strong> <strong>(Bethard)</strong>; basic NN and DL algorithms</span></li>
+  <li><span style="line-height:107%;font-size:13px;">LING/CSC 539, <strong>Statistical NLP</strong> <strong>(Mihai)</strong>; advanced NLP with deep learning</span></li>
+  <li><span style="line-height:107%;font-size:13px;">SCO 526, <strong>Network Science seminar</strong> <strong>(Breiger)</strong>; advanced &nbsp;SNA</span></li>
 </ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>Major Universities/Labs (check Google Scholar, DBLP, H-index)</strong></li>
+<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><span style="font-size:13px;line-height:107%;">&nbsp;</span></p>
+<ol style="list-style-type: undefined;margin-left:undefined;">
+  <li><span style="line-height:107%;font-size:13px;">Ph.D.</span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 601 Statistical Foundations of ML (Junmin); statistical basis for ML</span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 611A Design Science (Yong)</span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 611B Behavioral Research (Sue)</span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 611C <strong>Econometrics Research (Wei); possible for both Ph.D. and selected MS students</strong></span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 696A Readings in MIS (Jay)</span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 696D Data &amp; Web Mining (H Chen, Gondy)</span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 696X <strong>OR Research (Youn);</strong> <strong>possible new course after the successful BS/MS Optimization course</strong></span></li>
+  <li><span style="line-height:107%;font-size:13px;">MIS 6XX<strong>&nbsp;SNA (Sudha)</strong>, see above; approved recently</span></li>
 </ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
-  <li>MIS: Arizona (H. Chen, Nunamaker), NYU (Tuzhilin), CMU</li>
-  <li>CS: Berkeley (M. Jordan), Stanford (Andrew Ng, Feifei Li), Washington (O. Etzioni), UIUC (J. Han), UI Chicago (P. Yu), CMU, MIT; G. Hinton, Y. LeCun, Y. Bengio, I. Goodfellow (deep learning)</li>
-</ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>Major Federal Funding Agencies (UA/MIS funding $200M)</strong></li>
-</ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
-  <li>Research: NSF (STEM, $6B), NIH (health, $20B), DARPA (defense), IARPA (intelligence); UA/Eller/MIS Nunamker, H. Chen ($150M); NSF CyberCorps SFS Program (UA/AZSecure, $10M)</li>
-  <li>Operational: NSA (cybersecurity), CIA, FBI, DOD, DHS; NSA/DHS CAE-CD, R, CO (UA/MIS)</li>
-</ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: upper-alpha;margin-left:0.25in;" start="22">
-  <li><strong>Major Professional Societies, Conferences &amp; Journals (joint ASAP)</strong></li>
-</ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
-  <li>MIS: ICIS, AMCIS; MISQ, ISR, JMIS (top-3)</li>
-  <li>ACM: ACM SIG (special interest group), SIGKDD, SIGIR, SIGCHI; ACM KDD, CACM, ACM TOIS</li>
-  <li>IEEE Computer Society: IEEE ICDM, IEEE TKDE</li>
-  <li>Deep/Machine Learning: NeruIPS, IC on Learning Representation, IC on Machine Learning</li>
-  <li>Health Informatics: AMIA, JAMIA, JBI</li>
-  <li>Cybersecurity: DefCon, BlackHat; ACM CCS, IEEE S&amp;P, USENIX, IEEE ISI</li>
-</ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>Major Analytics Applications &amp; Technologies (try ASAP)</strong></li>
-</ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
-  <li>Applications: cybersecurity, health, e-commerce, social media, sports; drones, AV, VR, e-sports, facial recognition, smart city, 5G</li>
-  <li>Technologies: data mining (structured), text mining, web mining, deep learning, adversarial learning, transfer learning, reinforcement learning</li>
-</ul>
 
 </div>
 
