--- a/Advice/index.html
+++ b/Advice/index.html
@@ -25,52 +25,44 @@ a:link,a:visited {
         <a id="main-content"></a>   	
                           <h2 class="title" id="page-title"><font face="MiloWeb">The H-Index for Management Information Systems (Updated January 2019)</font></h2>                                                       
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
-  <p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><strong>Academic/Intellectual Advice:</strong></p>
-<ul style="list-style-type: disc;margin-left:undefined;">
+<p><strong>Academic/Intellectual Advice:</strong></p>
+<ul>
   <li>Societal Impacts (e.g., health, cybersecurity, green IT, privacy) &gt; &nbsp;Academic Impacts (papers)</li>
   <li>IT (including CS, EE, MIS; information centric) &gt; MIS</li>
   <li>CISE (computing, analytics; prescriptive) &gt; SBE (social, behavioral, economics; descriptive)</li>
   <li>New (new applications, new technologies) &gt; Old (existing, well-known)</li>
   <li>EQ (effort, attitude, time management, motivation, aspiration, discipline) &gt; IQ (raw talents)</li>
 </ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;"><strong>The Business Analytics Intellectual Landscape:</strong></p>
-<ol style="list-style-type: upper-roman;margin-left:0.25in;">
-  <li><strong>Major News Media and Scientific Publications (understanding the societal needs)</strong></li>
-</ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
+<p><strong>The Business Analytics Intellectual Landscape:</strong></p>
+<p><strong>&nbsp; 1. Major News Media and Scientific Publications (understanding the societal needs)</strong></p>
+<ul>
   <li>The Economists (global, geopolitics), NYT (US), WSJ (global, business)</li>
   <li>Nature, Science (some in IT, e.g., deep learning, AI; network science)</li>
 </ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.75in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>II. Major Industry Players/Labs (a global emerging IT landscape)</strong></li>
-</ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
+<p>&nbsp;</p>
+<p><strong>&nbsp; 2. Major Industry Players/Labs (a global emerging IT landscape)</strong></p>
+<ul>
   <li>FAANG: Facebook (social, facial recognition, AI), Amazon (e-commerce, recommender systems, logistics, cloud computing), Apple (mobile), Netflix (e-commerce, recommender systems), Google (SE, social, cloud computing, Brain, DeepMind)</li>
   <li>MI: Microsoft (AI, cloud computing), IBM (business analytics, cloud computing, AI/Waston)</li>
   <li>BATH: Baidu (SE, AI), Alibaba (e-commerce, m-commerce, AI), Tencent (social, m-commerce), Huawei (mobile, 5G, AI)</li>
 </ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>III. Major Universities/Labs (check Google Scholar, DBLP, H-index)</strong></li>
-</ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
+<p>&nbsp;</p>
+<p><strong>&nbsp; 3. Major Universities/Labs (check Google Scholar, DBLP, H-index)</strong></p>
+<ul>
   <li>MIS: Arizona (H. Chen, Nunamaker), NYU (Tuzhilin), CMU</li>
   <li>CS: Berkeley (M. Jordan), Stanford (Andrew Ng, Feifei Li), Washington (O. Etzioni), UIUC (J. Han), UI Chicago (P. Yu), CMU, MIT; G. Hinton, Y. LeCun, Y. Bengio, I. Goodfellow (deep learning)</li>
 </ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>IV. Major Federal Funding Agencies (UA/MIS funding $200M)</strong></li>
-</ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
+<p>
+  <br>
+</p>
+<p>&nbsp; <strong>4.&nbsp;</strong><strong>Major Federal Funding Agencies (UA/MIS funding $200M)</strong></p>
+<ul>
   <li>Research: NSF (STEM, $6B), NIH (health, $20B), DARPA (defense), IARPA (intelligence); UA/Eller/MIS Nunamker, H. Chen ($150M); NSF CyberCorps SFS Program (UA/AZSecure, $10M)</li>
   <li>Operational: NSA (cybersecurity), CIA, FBI, DOD, DHS; NSA/DHS CAE-CD, R, CO (UA/MIS)</li>
 </ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: upper-alpha;margin-left:0.25in;" start="22">
-  <li><strong>V. Major Professional Societies, Conferences &amp; Journals (joint ASAP)</strong></li>
-</ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
+<p>&nbsp;</p>
+<p><strong>&nbsp; 5. Major Professional Societies, Conferences &amp; Journals (joint ASAP)</strong></p>
+<ul>
   <li>MIS: ICIS, AMCIS; MISQ, ISR, JMIS (top-3)</li>
   <li>ACM: ACM SIG (special interest group), SIGKDD, SIGIR, SIGCHI; ACM KDD, CACM, ACM TOIS</li>
   <li>IEEE Computer Society: IEEE ICDM, IEEE TKDE</li>
@@ -78,11 +70,8 @@ a:link,a:visited {
   <li>Health Informatics: AMIA, JAMIA, JBI</li>
   <li>Cybersecurity: DefCon, BlackHat; ACM CCS, IEEE S&amp;P, USENIX, IEEE ISI</li>
 </ul>
-<p style="margin-top:0in;margin-right:0in;margin-bottom:.0001pt;margin-left:.5in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">&nbsp;</p>
-<ol style="list-style-type: undefined;margin-left:0.25in;">
-  <li><strong>VI. Major Analytics Applications &amp; Technologies (try ASAP)</strong></li>
-</ol>
-<ul style="list-style-type: disc;margin-left:undefined;">
+<p>&nbsp; <strong>6. Major Analytics Applications &amp; Technologies (try ASAP)</strong></p>
+<ul>
   <li>Applications: cybersecurity, health, e-commerce, social media, sports; drones, AV, VR, e-sports, facial recognition, smart city, 5G</li>
   <li>Technologies: data mining (structured), text mining, web mining, deep learning, adversarial learning, transfer learning, reinforcement learning</li>
 </ul>
